IDE plain-CSV IO: linear-time export, streaming primitive import
TimeSeriesCsvExporter was O(rows^2 x series): getValueAtTimestamp
re-scanned every series from index 0 for each output timestamp, so a
1M-row x 3-series export took ~5.5 minutes. Rows are now produced by a
k-way merge over the series' sorted timestamp arrays (shared
CsvExportUtil.forEachMergedRow) - O(total points), allocation-free per
row - and the same merge replaces SourceResCsvExporter's boxed-Long
TreeSet union + per-cell binary search. Duplicate-timestamp semantics
(one row, first valid value) are preserved and tested.

TimeSeriesCsvImporter no longer reads the whole file into a
List<String> for progress, and no longer boxes a Double per cell in a
fresh ArrayList per row. It now follows the SourceResCsvImporter
template: lines stream from a shared CountingInputStream for byte-based
progress, values accumulate into growable primitive double[] columns,
and TimeSeriesData is built from epoch-millis longs directly. Date
format detection now also captures date-only vs date-time, so the
common daily file no longer throws and catches a DateTimeParseException
per row; the per-cell numeric regex is replaced by an equivalent
hand-rolled scan (parity-tested against the old pattern). The strict
comma rule (thousands groupings only, else NaN - '1,5' must never
become 15), missing-value tokens, delimiter detection, warning/error
semantics, and the public API are unchanged; parse() is now callable
headless, with CsvImportTask a thin SwingWorker wrapper. Both exporters
write explicit UTF-8 instead of platform-default FileWriter.

Measured, 1M rows x 3 series (per manifestos/performance.md):
  import: 3544 ms -> ~650-870 ms   (~4-5x)
  export: 326560 ms -> ~340-370 ms (~900x, quadratic -> linear)

New tests: 20 correctness/round-trip cases plus a generous-bound
(<20 s) million-row perf sanity test that prints measured times.